# med_agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/eval/: baseline_results.json
data/raw/: chest_pain_triage.md  common_cold_flu.md  diabetes_type2.md  drug_interactions.md  hypertension_guide.md
scripts/: bench_trace_writer.py  demo.py  generate_testset.py  ingest.py
src/medical_agent/: config.py  observability.py
src/medical_agent/agent/: edges.py  graph.py  nodes.py  state.py  tools.py
src/medical_agent/api/: main.py  schemas.py
src/medical_agent/api/routes/: chat.py  eval.py
src/medical_agent/eval/: compare.py  ragas_runner.py
src/medical_agent/memory/: mem0_client.py
src/medical_agent/rag/: bm25_store.py  compressor.py  embedder.py  indexer.py  pipeline.py  reranker.py  retriever.py
tests/: conftest.py  test_agent_graph.py  test_api.py  test_memory.py  test_rag_pipeline.py
